<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crh_star_ros</name>
  <version>0.0.1</version>
  <description>ROS Deployment of the crh_star algorithm.</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_map_server</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





